fix mobile top spacing

--- a/assets/css/anthonystyle.css
+++ b/assets/css/anthonystyle.css
@@ -415,6 +415,8 @@ a.header:hover {
     }
 
     h1 {
+        padding-top: 0;
+        margin-top: -1.2vh;
         font-size: 4.5vw;
     }
 
